# rs-emoji-fromcode

./: Cargo.toml  README.md  example.sh  opt.sh  rs-emoji-fromcode.wasm
src/: lib.rs  main.rs
