[package]
name = "rs-emoji-fromcode"
version = "0.1.0"
edition = "2024"

description = "Converts the emoji codes to emoji chars."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-emoji-fromcode"
homepage = "https://github.com/takanoriyanagitani/rs-emoji-fromcode"
documentation = "https://docs.rs/rs-emoji-fromcode/latest"
keywords = ["emoji", "shortcode", "wasi", "conversion"]

exclude = [
  "rs-emoji-fromcode.wasm",
  "opt.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.emojis]
version = "0.8"
default-features = false
features = [
]
